[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/always-success",
  "tests",
]

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1
