[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/crypto-service-hash",
  "contracts/ipc-child",
  "contracts/ipc-parent",
  "contracts/spawn-parent",
  "contracts/spawn-child",
  "contracts/type-id",
  "contracts/script-hash",
  "contracts/log",
  "contracts/error",
  "contracts/tx-hash",
  "contracts/hello-world",
  "contracts/simple-print-args",
  "contracts/empty",
  "tests", "crate/ipc-interface",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
