[package]
name = "ipc-parent"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "1.1", features = ["allocator", "ckb-types", "dummy-atomic", "log"] }
ipc-interface = { path = "../../crate/ipc-interface/" }
ckb-script-ipc-common = "1.1"

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
