[package]
name = "crypto-service-hash"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.17.0"
ckb-script-ipc-common = "1.0.3"
ckb-script-ipc = "1.0.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
