[package]
name = "ipc-child"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.17.0", features = ["allocator", "ckb-types", "dummy-atomic", "log"] }
ipc-interface = { path = "../../crate/ipc-interface/" }
ckb-script-ipc-common = "1.0.3"

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
